--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ dependencies {
 //  Temporary explicit version to fix Thymeleaf bug
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
 	implementation 'org.springframework.security:spring-security-test'
+
+	// jjwt 0.9.1 -> 0.11.5로 버전업
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
